tests/pld-test-output/tests-Init-8-8_testAffExprVarOR/pld-compile.txt
line 3:6 token recognition error at: ','
line 6:6 token recognition error at: '|b'
Error in input.c.
Error no viable alternative at input 'int ab'. On position 3:7
   "	int a,b;"
           ^

1 error generated.

return code: 1
